apps/web/s4c/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: s4c
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: s4c
  template:
    metadata:
      labels:
        app: s4c

    spec:
      containers:
      - name: s4c
        image: replaced-by-kustomize
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
        ports:
          - containerPort: 3000
      imagePullSecrets:
      - name: ghcr-login-secret
