apps/web/s4c/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s4c
spec:
  selector:
    app: s4c
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
